# OWL-ROSPlan

./: .gitignore  README.md
rosplan_dummy_actions/: CMakeLists.txt  package.xml
rosplan_dummy_actions/src/: dummy_decrease_angle_node.cpp  dummy_increase_angle_node.cpp  dummy_rosplan_kb_client.cpp
rosplan_dummy_input/: CMakeLists.txt  package.xml
rosplan_dummy_input/scripts/rosplan_dummy_input/: __init__.py  dummy_input_node.py
rosplan_interface_mapping/: CMakeLists.txt
rosplan_interface_movebase/: CMakeLists.txt
rosplan_knowledge_base/: CMakeLists.txt  package.xml
rosplan_knowledge_base/common/: paco.owl
rosplan_knowledge_base/include/rosplan_knowledge_base/: ArmorManager.h  KnowledgeBase.h
rosplan_knowledge_base/launch/: rosplan_knowledge_base.launch
rosplan_knowledge_base/src/: ArmorManager.cpp  KnowledgeBase.cpp  KnowledgeComparitor.cpp  VALVisitorOperator.cpp
rosplan_perception_manager/: CMakeLists.txt  package.xml
rosplan_perception_manager/common/: domain.pddl
rosplan_perception_manager/launch/: onto_rosplan.launch  planning_system.launch  rosplan_knowledge_base.launch
rosplan_perception_manager/script/: armor_manager.py  dummy_input_node.py  dummy_perception.py
rosplan_perception_manager/src/: query.cpp
rosplan_plan_executer/: CMakeLists.txt  package.xml
rosplan_plan_executer/script/: dummy_action_executer.py
rosplan_planning_system/: CMakeLists.txt
rosplan_planning_system/common/: domain.pddl
rosplan_planning_system/include/rosplan_planning_system/: PlannerInterface.h  PlanningSystem.h  ProbePlanParser.h
rosplan_planning_system/launch/: launch_onto_rosplan.launch  launch_paco.launch  planning_system.launch
rosplan_planning_system/launch/includes/: problem_interface.launch
rosplan_planning_system/src/: PlanningEnvironment.cpp  PlanningSystem.cpp  RPActionInterface.cpp
rosplan_planning_system/src/PlanDispatch/: PlanDispatcher.cpp  SimplePlanDispatcher.cpp
rosplan_planning_system/src/PlanParsing/: POPFEsterelPlanParser.cpp  PlanParser.cpp  ProbePlanParser.cpp
rosplan_planning_system/src/ProblemGeneration/: PDDLProblemGenerator.cpp
rosplan_rqt/resource/: dispatcher.ui
rosplan_rqt/src/rosplan_rqt/: ROSPlanActionDispatcher.py  ROSPlanDispatcher.py  ROSPlanProblemViewer.py  action_dispatcher.py  graphUpdater.py
